# document-analysis-service

./: .gitignore  .gitleaks.toml  CLAUDE.md  Containerfile  FUTURE_ENHANCEMENTS.md  README.md  create_manifests_structure.sh  podman-compose.yml  pyproject.toml  research-granite-docling-258M.md  research-vllm-openshift-ai.md
manifests/: README.md
manifests/base/: configmap.yaml  deployment.yaml  kustomization.yaml  route.yaml  service.yaml
manifests/overlays/dev/: kustomization.yaml
manifests/overlays/prod/: kustomization.yaml
manifests/overlays/staging/: kustomization.yaml
src/: main.py
src/api/: models.py  rest.py
src/core/: analyzer.py  chunker.py  file_handler.py
src/mcp-spec/: MCP_TOOLS_SPEC.md
src/utils/: s3.py
tests/: test_api.py  test_core.py
